--- a/nodejs/http.html
+++ b/nodejs/http.html
@@ -6,12 +6,13 @@
     <title>Get my name</title>
 </head>
 <body>
-
-    <h1>Get my from server</h1>
-    <p>My name is <span class="name">....</span><span class="surname">....</span></p>
+    <h1>Get my name from server</h1>
+    <p>My name is <span class="name">...</span> <span class="surname">...</span></p>
     <button onclick="getMyName()">Get name</button>
+    <br>
+    <br>
+    <input id="surnameInput" type="text" name="surname" value="" placeholder="Enter surname" />
     <button onclick="postSurname()">Send Surname</button>
     <script src="http.js"></script>
-
 </body>
 </html>
